[package]
    name = "process_anywhere"
    version = "0.2.1"
    edition = "2024"
    license = "MIT-0"
    description = "Tools for running computer processes locally or remotely via SSH."
    repository = "https://github.com/ctrl-z-9000-times/process_anywhere"
    authors = ["David McDougall <dam1784@rit.edu>"]
    keywords = ["subprocess", "SSH"]
    categories = ["concurrency", "network-programming"]

[lib]
    doctest = false

[dependencies]
    libc = "0.2"
    ssh2 = "0.9"
    thiserror = "2.0"
